# arp

Homework W2/: first  first.c  third.c
Homework W3/: first
Homework W3/Fork and Spawn/: fork.c  run_f.sh  run_s.sh  spawn  spawn.c
Homework W4/: father  father.c  first.c  reader  run.sh  second.c  second1.c  writer  writer.c
Homework W4/Ex4-solved/: father  father.c  reader  reader.c  writer
Homework W5/Davide_sol/: makefile.old  master.c  reader.c  run.sh  server-old.c  server.c
Homework W5/Davide_sol/headers/: constants.h  wrapfunc.h
Homework W5/Mia_sol/: main.c  reader.c  server.c  writer.c
Homework W5/Valentina_sol/: reader.c  server.c  writer.c
Homework2/: run.sh  second  second.c  third
Homework3/: first.c  run.sh  second  spawn12  spawn12.c
Homework4/: writer
Homework5/Davide_sol/: makefile  writer.c
Homework5/Davide_sol/utility/: wrapfunc.c
Homework5/Josue/: Makefile
Homework5/Mia_sol/include/: constants.h
Homework5/Valentina/: main.c
Homework6/: child.c
Homework6/Davide/: CMakeLists.txt  master.c
Homework6/Davide/headers/: wrapfunc.h
Homework6/Davide/utility/: wrapfunc.c
Homework6/Josue/: child.c  common.h  father.c  log.txt  main.c  master  master.c  reader  reader.c  run.sh  sender  sender.c  writer  writer.c
Homework6/headers/: constants.h
Homework7/Davide1_WathdogWithoutPipes/: CMakeLists.txt  child.c  run.sh  watchdog.c
Homework7/Davide1_WathdogWithoutPipes/headers/: wrapfunc.h
Homework7/Davide1_WathdogWithoutPipes/utility/: wrapfunc.c
Homework7/Davide2/V1/: CMakeLists.txt  master.c  process.c  run.sh  watchdog.c
Homework7/Davide2/V1/headers/: constants.h
Homework7/Davide2/V2/: CMakeLists.txt  master.c  process.c  watchdog.c
Homework7/Mia/processes_signal_watchdog/: master.c  simple_process.c  watchdog.c
Homework7/Mia/processes_signal_watchdog/include/: constants.h
Homework7/Mia/watchdog_signals_processes/: makefile  master.c  simple_process.c  watchdog.c
Homework8/Davide/: CMakeLists.txt  master.c  reader.c  run.sh  server.c  writer.c
Homework8/Davide/headers/: constants.h  wrapfunc.h
Homework8/Davide/utility/: wrapfunc.c
Homework8/Mia/: main.c  makefile  notes.txt  reader.c  server.c  writer.c
Homework8/Mia/include/: constants.h
Homework9/: makefile  master.c  philosopher.c
Homework9/include/: constants.h
testing/: c-test  c-test.c  cpp-test.cpp  py-test.py  runc.sh
(+1 files in other folders)
